src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>ECM Support Process</fullName>
        <description>ECM Case Mgmt Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AutoDoc__c</fullName>
        <label>AutoDoc</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <formula>TEXT(Interaction__r.Caller_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caller Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <description>Member, provider or third party, this is the person who initiated the interaction</description>
        <label>Caller Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Caller Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created In Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Items_Complete__c</fullName>
        <description>Total number of resolved case items on a case</description>
        <label>Resolved Case Items</label>
        <summaryFilterItems>
            <field>Case_Item__c.Resolved__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Items_Total__c</fullName>
        <description>Total number of case items on a case</description>
        <label>Total Case Items</label>
        <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Items_Unresolved__c</fullName>
        <description>Roll Up Summary Field of the Count (# of) case&apos;s unresolved case items.</description>
        <label>Unresolved Case Items</label>
        <summaryFilterItems>
            <field>Case_Item__c.Resolved__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Item__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if case is a constituent complaint</description>
        <label>Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByMe__c</fullName>
        <formula>IF(CreatedBy.Id =  $User.Id,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Me</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DCN_Number__c</fullName>
        <label>DCN Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>Date of Birth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Name_Text__c</fullName>
        <description>Need this on the case to report on entitlement name. (The other field is a lookup value and cannot be used for reporting)
Currently is hidden on the case page layout.</description>
        <formula>Entitlement.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entitlement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <description>Place holder field</description>
        <label>Group ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <formula>TEXT(Interaction__r.Interaction_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Orphaned__c</fullName>
        <label>Last Orphaned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Re_Parented__c</fullName>
        <label>Last Re-Parented</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <formula>Contact.EID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Info__c</fullName>
        <label>Member Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Level_Exception_String__c</fullName>
        <label>Member Level Exception String</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <formula>IMAGE (IF( Target_Date__c &lt; NOW() ,&quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;),&quot;Status Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Updated__c</fullName>
        <inlineHelpText>Test field for POC</inlineHelpText>
        <label>Milestone Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misdirected_Reason__c</fullName>
        <label>Misdirected Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSP Facets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy RX Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHG Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Restrict</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Global Restrict</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Global</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Closed_Reason__c</fullName>
        <description>Global picklist used to denote why a case is closed</description>
        <globalPicklist>Closed_Reason</globalPicklist>
        <label>Closed Reason</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Onshore_Restriction__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Restriction for offshore to not handle case</description>
        <label>Onshore Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Subtype__c</fullName>
        <description>Used to capture case&apos;s subtype when case is created.  Field is read only on page layout.</description>
        <globalPicklist>Subtype</globalPicklist>
        <label>Original Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Type__c</fullName>
        <description>Captures the case&apos;s type when case is created.  Field is read only and does not change.</description>
        <globalPicklist>Type</globalPicklist>
        <label>Original Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OriginatorEmail__c</fullName>
        <description>Email ID of the person who initiated the interaction, It can be a member, provider or third party</description>
        <label>Originator Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginatorPhone__c</fullName>
        <description>Phone Number of the person who initiated the interaction, It can be a member, provider or third party</description>
        <label>Originator Phone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Relationship__c</fullName>
        <label>Originator Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Subscriber/Recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/Domestic Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Friend/Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Regulatory Agent/Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UHG Employee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <formula>TEXT(Interaction__r.Originator_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originator Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_name__c</fullName>
        <description>Member, provider or third party, this is the person who initiated the interaction</description>
        <label>Originator Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>if( Owner:Queue.Id = null, Owner:User.Profile.Name, &apos;&apos;)</formula>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager__c</fullName>
        <formula>if(Owner:User.ManagerId = $User.Id, 
&quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <description>This field is used to store policy number.</description>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Routing__c</fullName>
        <description>Used by ECM functionality - this field is included for use in the Routing Configuration object</description>
        <label>Priority Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reparent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reparent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repeat_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Repeat Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rollup_Fulfillment__c</fullName>
        <description>Rollup of fulfillment (letter)</description>
        <label>Rollup : Fulfillment</label>
        <summaryForeignKey>Create_Letter__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <description>Used to capture Service Level codes from OIL.  Service Level is used in Routing Configuration records to route cases to more urgent queues.</description>
        <label>Service Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <label>Situs State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Application__c</fullName>
        <formula>TEXT( Interaction__r.Source_Application__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <description>This field is to store source code.</description>
        <label>Source Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Name__c</fullName>
        <description>The person who is the focus of the interaction</description>
        <label>Subject Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Type__c</fullName>
        <label>Subject Type</label>
        <picklist>
            <picklistValues>
                <fullName>Group/Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker/General Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Agent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <globalPicklist>Subtype</globalPicklist>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surrogate_Key__c</fullName>
        <externalId>true</externalId>
        <label>Surrogate Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <description>Takes the lowest open sort order milestone and is the earlier of Target Date or Due Date</description>
        <label>Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaxID__c</fullName>
        <label>Tax ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <formula>IF( NOW() &gt;= Target_Date__c , -1*(NOW() - Target_Date__c),
 
             Target_Date__c - NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <globalPicklist>Topic</globalPicklist>
        <label>Topic</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Open_Pending_Submission_Letters__c</fullName>
        <label>Total Open/Pending Submission Letters</label>
        <summaryFilterItems>
            <field>Create_Letter__c.Letter_Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted, Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Create_Letter__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trigger_Initial_MP_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated (checked) by code when case is created so case updates, MP trigger fires and populates case&apos;s Target Date with its initial value of the first milestone&apos;s target date.</description>
        <label>Trigger Initial MP Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UHG_Restriction__c</fullName>
        <label>UHG Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>tst_Date_Field__c</fullName>
        <inlineHelpText>This is the sample date field</inlineHelpText>
        <label>Date Field</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>A4Me_Member_CCT_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>A4Me Member CCT</label>
        <queue>A4Me_Member_CCT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>A4Me_Member_CCT_Urgent_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>A4Me Member CCT - Urgent</label>
        <queue>A4Me_Member_CCT_Urgent</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACET_CSO_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACET CSO Queue</label>
        <queue>ACET_CSO_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACET_CSS_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACET CSS Queue</label>
        <queue>ACET_CSS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACET_Finance_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACET Finance Queue</label>
        <queue>ACET_Finance_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACET_Group_Enrollment_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACET Group Enrollment Queue</label>
        <queue>ACET_Group_Enrollment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACET_Member_Enrollment_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACET Member Enrollment Queue</label>
        <queue>ACET_Member_Enrollment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACET_Rapid_Responder_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACET Rapid Responder Team</label>
        <queue>ACET_Rapid_Responder_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACET_Supervisor_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACET Supervisor</label>
        <queue>ACET_Supervisor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_Payable_Payment_Inquiry_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Accounts Payable/Payment Inquiry</label>
        <queue>Accounts_Payable_Payment_Inquiry</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_Payable_Payment_Inquiry_Urgent_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Accounts Payable/Payment Inquiry- Urgent</label>
        <queue>Accounts_Payable_Payment_Inquiry_Urgent</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases_BO_Agent_Provider_Rework</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Agent - Provider Rework</value>
        </filters>
        <label>All Cases: BO Agent-Provider Rework</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ECM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases_BO_Director_Member_Rework</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Director - Member Rework</value>
        </filters>
        <label>All Cases: BO Director-Member Rework</label>
        <sharedTo>
            <roleAndSubordinatesInternal>ECM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ECM</fullName>
        <active>true</active>
        <businessProcess>ECM Support Process</businessProcess>
        <description>ECM Case Record Type</description>
        <label>ECM</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Case_Items_Must_be_Resolved_to_Close_Cas</fullName>
        <active>true</active>
        <description>Does not allow case status = Closed if any case items are unresolved.</description>
        <errorConditionFormula>Case_Items_Unresolved__c &lt;&gt; 0 &amp;&amp;   ISPICKVAL( Status , &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Resolve all case items before closing this case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCNNumbervalidation</fullName>
        <active>true</active>
        <description>This rule is to have only letters, numbers and hyphen(-). Always starts with Number only.</description>
        <errorConditionFormula>(NOT(REGEX( DCN_Number__c , &apos;^[a-zA-Z0-9-]*$&apos;)) || NOT( (BEGINS(DCN_Number__c, &apos;0&apos;) || BEGINS(DCN_Number__c, &apos;1&apos;) || BEGINS(DCN_Number__c, &apos;2&apos;) || BEGINS(DCN_Number__c, &apos;3&apos;) || BEGINS(DCN_Number__c, &apos;4&apos;) || BEGINS(DCN_Number__c, &apos;5&apos;) || BEGINS(DCN_Number__c, &apos;6&apos;) || BEGINS(DCN_Number__c, &apos;7&apos;) || BEGINS(DCN_Number__c, &apos;8&apos;) || BEGINS(DCN_Number__c, &apos;9&apos;) )) )&amp;&amp; NOT(ISBLANK(DCN_Number__c))</errorConditionFormula>
        <errorDisplayField>DCN_Number__c</errorDisplayField>
        <errorMessage>Only Characters(a-z, A-Z), Numbers(0-9), and Special character &quot;-&quot; are allowed. Should start with Numbers Only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_FirstRouteofCaseRule</fullName>
        <active>true</active>
        <description>Given I am a user
And I do not have at least one case item that is unresolved
And I am routing the case for the first time
When I click submit to route a case
Then I am unable to Route the case
And I receive an error message :</description>
        <errorConditionFormula>ISPICKVAL(Status, &apos;Open&apos;) &amp;&amp;  ISCHANGED( OwnerId ) &amp;&amp;  ( Case_Items_Unresolved__c ==0)</errorConditionFormula>
        <errorMessage>For the initial route,  at least one case item must be unresolved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_NotAllowReopenUnlessClosed</fullName>
        <active>true</active>
        <description>Given I am a user
And I am able to edit a case
When I change the status of a case
Then I only see Open, Waiting and Reopen status values are available
And if I select Reopen status
Then I receive an error message:</description>
        <errorConditionFormula>(ISPICKVAL(PRIORVALUE(Status) , &apos;Open&apos;) || ISPICKVAL(PRIORVALUE(Status) , &apos;Follow Up&apos;) || ISPICKVAL(PRIORVALUE(Status) , &apos;Waiting&apos;)||ISPICKVAL(PRIORVALUE(Status) , &apos;Routed&apos;)||ISPICKVAL(PRIORVALUE(Status) , &apos;Assigned&apos;)||ISPICKVAL(PRIORVALUE(Status) , &apos;Canceled&apos;))
&amp;&amp; 
ISPICKVAL(Status, &apos;Reopen&apos;)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Reopen is not a valid status unless the case is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_OnlyAllowReopenWhenCaseClosed</fullName>
        <active>true</active>
        <description>Given I am a user
And I am able to edit a case
When I change the status of a case
Then I only see Open, Waiting and Reopen status values are available
And if I select Reopen status
Then I receive an error message:</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Status) , &apos;Closed&apos;) 
&amp;&amp; 
(ISPICKVAL(Status, &apos;Open&apos;)|| ISPICKVAL(Status, &apos;Waiting&apos;))</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>When a case is closed, the status can only be changed to Reopen.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECM_PreventOpenUnlessNewCase</fullName>
        <active>true</active>
        <description>Given I am a user
And I am able to edit a case
When I change the status of a case
Then I see the Open, Waiting and Reopen status values are available
And if I select Open status
Then I receive an error message:</description>
        <errorConditionFormula>NOT(ISPICKVAL(PRIORVALUE(Status) , &apos;Open&apos;)) &amp;&amp; ISPICKVAL(Status, &apos;Open&apos;)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You cannot select Open as a status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventCaseOwnerChangeonStatusCloseCance</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISCHANGED(  OwnerId   )  &amp;&amp;  (ISPICKVAL( Status , &apos;Closed&apos;)   ||  ISPICKVAL(Status, &apos;Cancelled&apos;))  , true, false)</errorConditionFormula>
        <errorMessage>Cases with Closed or Canceled status cannot change ownership.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Closing_Case_With_Open_Letter</fullName>
        <active>true</active>
        <description>Submit/Cancel the Letters(Fulfillments) if the case is associated with any open Letter before closing the case</description>
        <errorConditionFormula>Total_Open_Pending_Submission_Letters__c &lt;&gt;0 &amp;&amp; ISPICKVAL( Status , &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Case cannot be closed prior to selecting Submit or Cancel letter.</errorMessage>
    </validationRules>
</CustomObject>